# JurisREM-API

./: .env.example  README.md  app.py  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/: __init__.py
api/interface/: processo.py
api/models/: __init__.py  _base.py  advogado.py  cliente.py  processo.py  usuario.py
api/routes/: __init__.py  advogados.py  auth.py  clientes.py  dashboard.py  main.py  processos.py
api/schemas/: __init__.py
api/services/: __init__.py
app/: __init__.py
app/models/: __init__.py  _base.py  advogado.py  cliente.py  processo.py  usuario.py
app/routes/: advogados.py  auth.py  clientes.py  dashboard.py  errors.py  main.py  processos.py
app/schemas/: __init__.py
app/services/: __init__.py
tests/: conftest.py  test_auth.py
