[project]
name = "jurisrem-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "marshmallow>=4.0.1",
    "marshmallow-sqlalchemy>=1.4.2",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
]
